# iced-docs

./: .env  .gitignore  AGENTS.md  CHANGE_TRACKER.md  CHECKLIST.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  RULE_BOOK.md  SITE_SPEC.md  build.rs  iced_documentation_site_spec.md
assets/: main.css  tailwind.css
scripts/: ci_quality_gates.sh  expand_example_map.sh  generate_reference_pages.sh  rustfmt_markdown_code_blocks.sh
src/: main.rs
src/app/: catalog.rs  generated.rs  markdown.rs  mod.rs  routing.rs  sidebar.rs  types.rs
src/content/latest/guide/: bundling.md  distribution.md  installation.md  overview.md  project-setup.md  tooling.md
src/content/latest/reference/: constructors.md  core-concepts.md  elements.md  enums.md  families.md  modules.md  runtime-api.md  runtime-fn-application.md  runtime-fn-daemon.md  runtime-fn-exit.md  runtime-fn-never.md  runtime-fn-run.md  structs.md  tasks-subscriptions.md  widget-constructor-bottom.md  widget-constructor-bottom_center.md  widget-constructor-bottom_right.md  widget-constructor-button.md  widget-constructor-center.md  widget-constructor-center_x.md  widget-constructor-center_y.md  widget-constructor-checkbox.md  widget-constructor-column.md  widget-constructor-combo_box.md  widget-constructor-container.md  widget-constructor-float.md  widget-constructor-grid.md  widget-constructor-hover.md  widget-constructor-iced.md  widget-constructor-keyed_column.md  widget-constructor-mouse_area.md  widget-constructor-opaque.md  widget-constructor-pane_grid.md  (+87 more)
src/docs-meta/: example_map.tsv
(+185 files in other folders)
