[package]
name = "iced-docs"
version = "0.1.0"
authors = ["Adam Howard <adam.thomas.howard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
dioxus-markdown = "0.0.1"
pulldown-cmark = "0.13"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
